Fix event page on mobile

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -33,8 +33,17 @@
     }
     .event-date {
       font-size: 20px;
+      float: right;
       span {
         padding-right: 10px;
+      }
+
+      @media screen and (max-width: 767px) {
+        float: none;
+        text-align: right;
+        font-size: 15px;
+        margin-bottom: 10px;
+        margin-top: -15px;
       }
     }
   }
